binread/tests/errors/invalid_assert.stderr
error: too many arguments
 --> $DIR/invalid_assert.rs:4:31
  |
4 | #[br(assert(false, "message", "too", "many", "arguments"))]
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^
